fix: correct processing of cctray cache updates for deleted pipelines
With deleted pipelines, the pipeline's group cannot be found, and thus permissions cannot be correctly derived logging an ugly exception. Make the permissions return as "no permissions" to avoid these ugly exceptions being processes.